--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -20,11 +20,18 @@
         android:layout_marginTop="16dp" />
 
     <TextView
+        android:id="@+id/tvHotelDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_marginTop="16dp" />
+
+    <TextView
         android:id="@+id/tvHotelLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="18dp" />
 
     <TextView
         android:id="@+id/tvHotelStars"
@@ -41,11 +48,28 @@
         android:layout_marginTop="8dp" />
 
     <TextView
-        android:id="@+id/tvHotelDescription"
+        android:id="@+id/tvFreeCancellation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="8dp"
+        android:text="Free Cancellation"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tvPrePayment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Prepayment Required"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tvBreakfastIncluded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Breakfast Included"
+        android:visibility="gone" />
 
     <ImageButton
         android:id="@+id/btnBack"
