--- a/app/src/main/res/layout/fragment_hotels.xml
+++ b/app/src/main/res/layout/fragment_hotels.xml
@@ -6,6 +6,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHotels"
         android:layout_width="match_parent"
-        android:layout_height="567dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
         android:padding="8dp" />
 </RelativeLayout>
