--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/hotel_24px"
         android:title="Hotels" />
     <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/account_circle_24px"
+        android:title="Profile" />
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/logout_24px"
         android:title="Logout" />
