--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,33 +1,52 @@
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imgProfilePicture"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/profileImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/default_profile_image"
-        android:contentDescription="Profile Picture"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="Profile Image" />
 
     <EditText
-        android:id="@+id/etUserName"
-        android:layout_width="match_parent"
+        android:id="@+id/editName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="User Name"/>
+        android:hint="Enter your name"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@id/profileImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/btnEditProfile"
-        android:layout_width="match_parent"
+        android:id="@+id/btnEditImage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit Profile"/>
+        android:text="Edit Image"
+        app:layout_constraintTop_toBottomOf="@id/editName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp" />
 
     <Button
-        android:id="@+id/btnSaveProfile"
-        android:layout_width="match_parent"
+        android:id="@+id/btnSave"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save Profile"/>
-</LinearLayout>
+        android:text="Save"
+        app:layout_constraintTop_toBottomOf="@id/btnEditImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
