--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/account_circle_24px"
         android:title="Profile" />
     <item
+        android:id="@+id/nav_my_comments"
+        android:icon="@drawable/comment_24px"
+        android:title="My Comments" />
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/logout_24px"
         android:title="Logout" />
