--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -85,18 +85,19 @@
         android:text="Select Image"
         android:layout_marginTop="8dp" />
 
+    <!-- RecyclerView for displaying comments -->
     <Button
         android:id="@+id/btnSubmitComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Comment"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:text="Submit" />
 
-    <!-- RecyclerView for displaying comments -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="16dp"/>
 
     <ImageButton
