--- a/app/src/main/res/layout/fragment_hotels.xml
+++ b/app/src/main/res/layout/fragment_hotels.xml
@@ -7,6 +7,5 @@
         android:id="@+id/rvHotels"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:padding="8dp" />
+        android:paddingBottom="56dp" />
 </RelativeLayout>
