--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -18,4 +18,11 @@
         android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:visibility="gone" />
+    <TextView
+        android:id="@+id/tvCommentDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:padding="4dp"
+        android:textSize="12sp"/>
 </LinearLayout>
