Added spinners to different fragments in our app

--- a/app/src/main/res/layout/fragment_hotel_detail.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail.xml
@@ -123,5 +123,7 @@
             android:contentDescription="@string/back_button"
             android:src="@drawable/arrow_back_24px" />
 
+        <include layout="@layout/layout_loading_overlay" />
+
     </LinearLayout>
 </ScrollView>
