--- a/app/src/main/res/layout/fragment_my_comments.xml
+++ b/app/src/main/res/layout/fragment_my_comments.xml
@@ -11,4 +11,7 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
+
+    <include layout="@layout/layout_loading_overlay" />
+
 </LinearLayout>
