--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGIN"
+        android:text="Login"
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -80,7 +80,7 @@
         android:text="Login"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:backgroundTint="#000f89"
+        android:backgroundTint="#0d98ba"
         app:cornerRadius="25dp"
         android:layout_marginTop="16dp" />
 
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Not Registered? Click here"
-        android:textColor="#000f89"
+        android:textColor="#0d98ba"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
