--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="REGISTER"
+        android:text="Registration"
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -130,7 +130,7 @@
         android:text="Register"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:backgroundTint="#000f89"
+        android:backgroundTint="#0d98ba"
         app:cornerRadius="25dp"
         android:layout_marginTop="16dp" />
 
@@ -139,7 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account? Login here"
-        android:textColor="#000f89"
+        android:textColor="#0d98ba"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
