--- a/app/src/main/res/layout/fragment_my_comments.xml
+++ b/app/src/main/res/layout/fragment_my_comments.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <include layout="@layout/layout_loading_overlay" />
+
+    <TextView
+        android:id="@+id/tvMyComments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:layout_marginEnd="281dp"
+        android:text="My Reviews"
+        android:textColor="@android:color/black"
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMyComments"
@@ -11,7 +25,5 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
-
-    <include layout="@layout/layout_loading_overlay" />
 
 </LinearLayout>
