--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,7 +80,6 @@
         android:text="Login"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:backgroundTint="#0d98ba"
         app:cornerRadius="25dp"
         android:layout_marginTop="16dp" />
 
@@ -89,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Not Registered? Click here"
-        android:textColor="#0d98ba"
+        android:textColor="#800080"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp" />
